--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Lisa Stanley</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Lisa Stanley" />
+      <meta name="description" content="Portfolio webpage of L Stanley" />
       <meta name="keywords"
-          content="portfolio,website,personal website,github,projects,cloud administration, and data science" />
-      <meta name="author" content="Lisa Stanley" />
+          content="portfolio,website,personal website,github,projects,cloud,cybersecurity,newbie" />
+      <meta name="author" content="L Stanley" />
       <!--Social Media icons-->
       <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-      <link rel="icon" type="image/png" href="/images/logo.png">
+      <link rel="icon" type="image/png" href="images/LisaStanley-1.jpg">
       <link
           href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700"
           rel="stylesheet">
@@ -51,13 +51,13 @@
                 class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img"
-                      style="background-image: url(https://www-stanli.s3.us-east-2.amazonaws.com/Untitled+design.jpg);">
+                      style="background-image: url(https://3.bp.blogspot.com/-BpdtyxSIMDY/UJd_VPvDVqI/AAAAAAAADA4/3kDY2dhpajg/s1600/honeycomb-orange_background_pattern.jpg);">
                   </div>
                   <h1 id="colorlib-logo"><a href="./index.html">Lisa Stanley</a>
                   </h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar"
-                   style="padding-top: 2em">
+                   style="padding-top: 2">
                   <div id="navbar" class="collapse">
                      <ul>
                         <li><a href="#" data-nav-section="about">About</a></li>
@@ -84,26 +84,30 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>About</h1>
-                           <p>Hello, World &#128075; <br><br>I'm Lisa. I’m currently studying
-                              cloud administration with Microsoft, and independently
-                              practicing <b>Python</b> and Powershell automation solutions for 
-                              supporting <b>Azure</b> infrastructure. I completed a Master's
+                           <p>Hello, World &#128075; <br><br>I'm Lisa. I retired from the military
+                              and joined a major airline company as a Scrum Master before
+                              landing at a consultancy where I lead teams and stay actively engaged
+                              in business development opportunities for technology and cybersecurity.
+                              In my spare time, I complete CTFs and play TryHackMe boxes, while independently
+                              practicing <b>Python</b> and PowerShell. In my pre-retiree life, I learned about
+                              <b>cloud computing</b> and Azure infrastructure. It was a blast! 
+                              Many years ago, I completed a Master's
                               in Leadership (with a Non-Profit Management Concentration) at
-                              <b>Northeastern University</b> while serving in the Army. 
-                               Finally, after 20 years as a leader in positions of escalating
-                              responsibility -and jumping out multiple aircrafts, I'll be joining the 
-                              civilian world in 2022.
+                              <b>Northeastern University</b> while serving in the Army and jumping out multiple aircrafts.
+                              Now, I am looking for a home that needs a business-saavy leader with a passion for hands-on tech
+                              and protecting people and systems from threat actors.
                            </p>
                            <p><b>How I got here:</b> I started coding (in C++) and writing HTML in high-school, and always
-                              remembered my early passion fondly. I am excited to be returning to the
-                              newly evolved technological landscape as a seasoned learner.</p>
-                           <p>I'm an <b>insatiably curious</b> problem-finder,
-                              solution-seeker, and an OpenSource enthusiast. IT is about customer service and teamwork,
-                              and what drew me back to IT was my passion for solutions through collaboration,
-                              diversity's impact to innovation and an understanding of client-facing processes;
-                              whether private or public. My passion is <b>making an impact</b> as an autonomous worker, 
-                           supported by transparency, and challenging work. I thrive when given resources, freedom, 
-                              and a problem set.</p> Oh, and <b> coffee</b>
+                              remembered my early interest while serving in the military. I turned back to the evolving
+                            technological landscape as a seasoned leader with an insatiable curiousity.</p>
+                           <p>I'm a <b>curious</b> problem-finder,
+                              solution-seeker, and an OpenSource enthusiast. Tech, for me, is about customer service and teamwork;
+                               what drew me back to IT was a passion for impacting organizations through collaboration. I'm a fan of 
+                              diversity's impact on innovation and appreciate the client-facing processes;
+                              whether private or public. I'm great at <b>making an impact</b> in autonomous environments, 
+                           I grow with transparency, and flourish amongst challenging work. A strategic thinker at my core,
+                           I'll thrive when given resources, freedom, 
+                              and a problem set needing solid research.</p> Oh, and <b> coffee</b> is a fuel source. 
                            <p class="finalText">I love to read non-fiction, listen to music, meditate,
                               and travel.</p>
                         </div>
@@ -120,10 +124,12 @@
                            <strong>AZ-900<br> Azure Fundamentals<br>
                               AI-900<br> Artificial Intelligence Fundamentals
                            </strong><br>
-                              PL-900 (pending) <br> Power Platform Fundamentals<br>
-                              DP-900 (pending)<br> Data Fundamentals<br>
+                              PL-900 <br> Power Platform Fundamentals<br>
+                              DP-900 <br> Data Fundamentals<br>
                               Microsoft Networking Fundamentals (98-366)<br>
-                              Security + (pending)<br>
+                              Security + <br>
+                              Network + <br>
+                              ISC2's CC - Cisco's CCSK - and <b></b> all the scrum and agile you could stomach. </b>
                            <br>
                            Je suis debutante, et j'apprends Python, Powershell, et le Francais.
                            <br>I'm a beginner, and I'm learning Python, Powershell, and French.<br><br>
@@ -136,8 +142,8 @@
                               <li>Powershell webhooks, automation, and CLI utilization for creation of GUIs, node charts, pdf printers and file scanners</li>
                               <li>Docker engagements for Azure and AWS interfacing</li>
                               <li>Kubernetes and AWS infrastructure</li>
-                              <li>Harvard's CS50x (in progress)</li>
-                              <li>Linux Apache MySQL and Python stack on RPBI for a webserver (in progress)</li>
+                              <li>Practical Network Penetration Tester (PNPT) Studies </li>
+                              <li>Linux Apache MySQL and Python stack on RPBI for a webserver</li>
                            </ul>
                         </div>
                      </div>
@@ -162,7 +168,7 @@
                               <p style="margin-bottom: 0px">Data Analysis Projects</p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
-                           <ul id="data-analysis" class="submenu">
+                           <ul id="data-analysis" class="submenu"> There is nothing here.
                            </ul>
                         </li>
                         <li>
@@ -171,16 +177,16 @@
                               </p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
-                           <ul id="cloud-projects" class="submenu">
+                           <ul id="cloud-projects" class="submenu"> There is not much here, either.
                            </ul>
                         </li>
                         <li>
                            <div class="link">
                               <p style="margin-bottom: 0px">Automation Projects
                               </p>
-                              <i class="fa fa-chevron-down"></i>
+                              <i class="fa fa-chevron-down"></i> 
                            </div>
-                           <ul id="automation-projects" class="submenu">
+                           <ul id="automation-projects" class="submenu"> Still nothing.
                            </ul>
                         </li>
                         <li>
@@ -189,7 +195,7 @@
                               </p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
-                           <ul id="freelance-projects" class="submenu">
+                           <ul id="freelance-projects" class="submenu"> I feel like something should be here, at least.
                            </ul>
                         </li>
                      </ul>
