--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                               in business development opportunities for technology and cybersecurity.
                               In my spare time, I complete CTFs and play TryHackMe boxes, while independently
                               practicing <b>Python</b> and PowerShell. In my pre-retiree life, I learned about
-                              <b>cloud computing</b> and Azure infrastructure. It was a blast! 
+                              <b>cloud computing</b> and Azure infrastructure. It was a blast! <br>
                               Many years ago, I completed a Master's
                               in Leadership (with a Non-Profit Management Concentration) at
                               <b>Northeastern University</b> while serving in the Army and jumping out multiple aircrafts.
                               Now, I am looking for a home that needs a business-saavy leader with a passion for hands-on tech
                               and protecting people and systems from threat actors.
-                           </p>
+                           </p><br>
                            <p><b>How I got here:</b> I started coding (in C++) and writing HTML in high-school, and always
                               remembered my early interest while serving in the military. I turned back to the evolving
                             technological landscape as a seasoned leader with an insatiable curiousity.</p>
@@ -107,7 +107,7 @@
                               whether private or public. I'm great at <b>making an impact</b> in autonomous environments, 
                            I grow with transparency, and flourish amongst challenging work. A strategic thinker at my core,
                            I'll thrive when given resources, freedom, 
-                              and a problem set needing solid research.</p> Oh, and <b> coffee</b> is a fuel source. 
+                              and a problem set needing solid research.</p> Oh, and <b> coffee</b> is a fuel source. <br>
                            <p class="finalText">I love to read non-fiction, listen to music, meditate,
                               and travel.</p>
                         </div>
@@ -165,7 +165,7 @@
                          data-animate-effect="fadeInRight">
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Data Analysis Projects</p>
+                              <p style="margin-bottom: 0px">Data Analysis</p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
                            <ul id="data-analysis" class="submenu"> There is nothing here.
@@ -173,7 +173,7 @@
                         </li>
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Cloud Projects
+                              <p style="margin-bottom: 0px">Cloud
                               </p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
@@ -182,7 +182,7 @@
                         </li>
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Automation Projects
+                              <p style="margin-bottom: 0px">Cybersecurity
                               </p>
                               <i class="fa fa-chevron-down"></i> 
                            </div>
@@ -213,6 +213,25 @@
                         </div>
                      </div>
                      <div class="timeline-centered">
+                         <article class="timeline-entry animate-box"
+                            data-animate-effect="fadeInLeft">
+                           <div class="timeline-entry-inner">
+                              <div class="timeline-icon color-1">
+                                 <i class="fa fa-code"></i>
+                              </div>
+                              <div class="timeline-label">
+                                 <h2><a href="#">Agile Leadership</a>
+                                    <span>June 2022-Present</span>
+                                 </h2>
+                                 <p class="finalText">Leads a team of agile technologists, 
+                                    manages budgets and timelines, communicates and clarifies MVP, 
+                                    supports DEI initiatives at the strategic level,
+                                    <strong>won a contract modification and improved PI predictability</strong>,
+                                    tailored roadmaps for a shared operational glidepath to product success. 
+                                    </p></strikethrough>
+                              </div>
+                           </div>
+                        </article>
                         <article class="timeline-entry animate-box"
                             data-animate-effect="fadeInLeft">
                            <div class="timeline-entry-inner">
