--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                               </div>
                               <div class="timeline-label">
                                  <h2><a href="#">Agile Leadership</a>
-                                    <span>June 2022-Present</span>
+                                    <span>June 2022 - Present</span>
                                  </h2>
                                  <p class="finalText">Leads a team of agile technologists, 
                                     manages budgets and timelines, communicates and clarifies MVP, 
@@ -240,7 +240,7 @@
                               </div>
                               <div class="timeline-label">
                                  <h2><a href="#">Microsoft's Software and Systems Academy</a>
-                                    <span>January 2022 - Present</span>
+                                    <span>January 2022 - May 2022</span>
                                  </h2>
                                  <p class="finalText"><strong>Cloud
                                        Administration
@@ -319,7 +319,7 @@
                                           with a Psychology Minor</span>
                                  </h2>
                                  <p class="finalText">Rugby Club, Take Back the Night Planning Committee,
-                                    Student Buddhist Group.</p></strikethrough>
+                                    Student Buddhist Group.</p>
                               </div>
                            </div>
                         </article>
